--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "content-type": "^1.0.4",
     "cookie": "^0.4.0",
     "cookie-signature": "^1.0.6",
+    "css-loader": "^6.2.0",
     "debug": "^2.6.9",
     "depd": "^1.1.2",
     "destroy": "^1.0.4",
@@ -61,11 +62,14 @@
     "react-dom": "^17.0.2",
     "safe-buffer": "^5.1.2",
     "safer-buffer": "^2.1.2",
+    "sass": "^1.35.2",
+    "sass-loader": "^12.1.0",
     "scheduler": "^0.20.2",
     "send": "^0.17.1",
     "serve-static": "^1.14.1",
     "setprototypeof": "^1.1.1",
     "statuses": "^1.5.0",
+    "style-loader": "^3.2.1",
     "toidentifier": "^1.0.0",
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
