--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mime": "^1.6.0",
     "mime-db": "^1.48.0",
     "mime-types": "^2.1.31",
+    "mongodb": "^4.0.1",
     "ms": "^2.0.0",
     "negotiator": "^0.6.2",
     "object-assign": "^4.1.1",
