--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@babel/core": "^7.14.6",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "accepts": "^1.3.7",
     "array-flatten": "^1.1.1",
+    "axios": "^0.21.1",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^3.1.2",
