--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "fleksi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "dist/index.js",
   "directories": {
     "doc": "docs",
     "example": "example"
@@ -80,11 +79,18 @@
     "vary": "^1.1.2",
     "webpack": "^5.45.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^16.4.10",
+    "tslint": "^6.1.3"
+  },
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "jsx": "npx babel --watch src --out-dir public --presets react-app/prod"
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
