--- a/package.json
+++ b/package.json
@@ -83,10 +83,16 @@
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.4.10",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.24.0",
     "tslint": "^6.1.3"
   },
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "lint": "eslint . --ext .ts",
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
