--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "statuses": "^1.5.0",
     "style-loader": "^3.2.1",
     "toidentifier": "^1.0.0",
+    "ts-loader": "^9.2.4",
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
