--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
+    "@reduxjs/toolkit": "^1.6.1",
     "accepts": "^1.3.7",
     "array-flatten": "^1.1.1",
     "axios": "^0.21.1",
@@ -62,6 +63,7 @@
     "raw-body": "^2.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "safe-buffer": "^5.1.2",
     "safer-buffer": "^2.1.2",
     "sass": "^1.35.2",
