--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.4.10",
     "@types/react": "^17.0.15",
@@ -92,6 +93,8 @@
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.24.0",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.4",
     "tslint": "^6.1.3"
   },
   "scripts": {
@@ -99,7 +102,8 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
