--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "mime": "^1.6.0",
     "mime-db": "^1.48.0",
     "mime-types": "^2.1.31",
-    "mongodb": "^4.0.1",
+    "mongodb": "^4.1.2",
     "ms": "^2.0.0",
     "negotiator": "^0.6.2",
     "object-assign": "^4.1.1",
@@ -75,12 +75,10 @@
     "statuses": "^1.5.0",
     "style-loader": "^3.2.1",
     "toidentifier": "^1.0.0",
-    "ts-loader": "^9.2.4",
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
-    "vary": "^1.1.2",
-    "webpack": "^5.45.1"
+    "vary": "^1.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -95,13 +93,17 @@
     "eslint-plugin-react": "^7.24.0",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.4",
-    "tslint": "^6.1.3"
+    "ts-loader": "^9.2.6",
+    "tslint": "^6.1.3",
+    "typescript": "^4.4.3",
+    "webpack": "^5.54.0",
+    "webpack-cli": "^4.8.0"
   },
   "scripts": {
     "lint": "eslint . --ext .ts",
-    "build": "tsc",
+    "build": "webpack",
     "prestart": "npm run build",
-    "start": "node dist/server/index.js",
+    "start": "node dist/src/server/index.js",
     "test": "jest",
     "coverage": "jest --coverage"
   },
