--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,40 @@
+// {
+//     "compilerOptions": {
+//         "noImplicitAny": false,
+//         "target": "ES5",
+//         "module": "ES2015"
+//     }
+// }
 {
     "compilerOptions": {
-        "module": "commonjs",
+        "module": "ES2015",
         "esModuleInterop": true,
-        "target": "es6",
+        "target": "es5",
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
-        "outDir": "dist",
-        "baseUrl": "./src/",
-        "paths": {
-            "*": [
-                "node_modules/*"
-            ]
-        },
         "jsx": "react",
     },
-    "include": [
-        "src/**/*"
-    ]
 }
+// {
+//     "compilerOptions": {
+//         "module": "commonjs",
+//         "esModuleInterop": true,
+//         "target": "es6",
+//         "noImplicitAny": true,
+//         "moduleResolution": "node",
+//         "sourceMap": true,
+//         "outDir": "dist",
+//         "baseUrl": "./src/",
+//         "paths": {
+//             "*": [
+//                 "node_modules/*"
+//             ]
+//         },
+//         "jsx": "react",
+//     },
+//     "include": [
+//         "src/**/*",
+//         "example/components/*"
+//     ]
+// }
