--- a/package.json
+++ b/package.json
@@ -91,7 +91,9 @@
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.24.0",
+    "ignore-loader": "^0.1.2",
     "jest": "^27.0.6",
+    "mini-css-extract-plugin": "^2.3.0",
     "ts-jest": "^27.0.4",
     "ts-loader": "^9.2.6",
     "tslint": "^6.1.3",
