--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
         "module": "ES2015",
         "esModuleInterop": true,
         "target": "es5",
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "moduleResolution": "node",
         "sourceMap": true,
         "jsx": "react",
