--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "accepts": "^1.3.7",
     "array-flatten": "^1.1.1",
+    "axe-prop-types": "^1.0.9",
     "axios": "^0.21.1",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.2",
@@ -57,6 +58,7 @@
     "on-finished": "^2.3.0",
     "parseurl": "^1.3.3",
     "path-to-regexp": "^0.1.7",
+    "prop-types": "^15.7.2",
     "proxy-addr": "^2.0.7",
     "qs": "^6.7.0",
     "range-parser": "^1.2.1",
