--- a/package.json
+++ b/package.json
@@ -96,11 +96,13 @@
     "ignore-loader": "^0.1.2",
     "jest": "^27.0.6",
     "mini-css-extract-plugin": "^2.3.0",
+    "nodemon": "^2.0.13",
+    "npm-run-all": "^4.1.5",
     "ts-jest": "^27.0.4",
     "ts-loader": "^9.2.6",
     "tslint": "^6.1.3",
     "typescript": "^4.4.3",
-    "webpack": "^5.54.0",
+    "webpack": "^5.58.1",
     "webpack-cli": "^4.8.0"
   },
   "scripts": {
@@ -108,6 +110,12 @@
     "build": "webpack --config webpack/webpack.server.js && webpack --config webpack/webpack.client.js",
     "prestart": "npm run build",
     "start": "node build-server/server.js",
+
+    "watch:build-server": "webpack --config webpack/webpack.server.js --watch",
+    "watch:build-client": "webpack --config webpack/webpack.client.js --watch",
+    "watch:server": "nodemon ./build-server/server.js --watch ./build-server",
+    "start-dev": "npm-run-all --parallel watch:server watch:build-server watch:build-client",
+    
     "test": "jest",
     "coverage": "jest --coverage"
   },
